--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div
               class="
                 my-auto
-                offset-1
+                offset-lg-1
                 col-lg-6 col-12
                 text-center text-lg-start
                 order-lg-first
@@ -73,16 +73,17 @@
           <img
             src="assets\images\michael-smile-vines.png"
             alt="Michael Gombos Standing"
-            class="
-              img-fluid
-              border border-3
-              rounded-top-left rounded-bottom-right
-            "
+            class="img-fluid rounded-top-left rounded-bottom-right"
           />
         </figure>
 
-        <div class="col-lg-4 col-10 offset-1 offset-lg-0 my-auto">
-          <h2 class="display-3">About Me</h2>
+        <div class="col-lg-5 col-10 offset-1 offset-lg-0 my-auto">
+          <!-- Todo: display none on phone, change direction instead -->
+          <h2 class="display-3">
+            <i class="w-75 d-none d-lg-inline fas fa-arrow-left"></i
+            ><i class="w-75 d-lg-none d-inline fas fa-arrow-up"></i>Yep, thats
+            me!
+          </h2>
           <p class="lead">
             I am a Computer Science major at HCC, I work from home as a Web
             Designer by day, and freelancer by night.
@@ -117,7 +118,16 @@
               </p>
               <i class="bi bi-arrow-right-circle-fill"></i>
             </div>
-            <figure class="col-10 col-lg-2 my-auto order-first order-lg-last">
+            <figure
+              class="
+                col-3
+                my-2 my-lg-0
+                offset-2 offset-lg-0
+                col-lg-2
+                my-auto
+                order-first order-lg-last
+              "
+            >
               <img
                 src="assets\images\99cave-logo.png"
                 alt=""
@@ -150,7 +160,16 @@
               </p>
               <i class="bi bi-arrow-right-circle-fill"></i>
             </div>
-            <figure class="col-10 col-lg-2 my-auto order-first order-lg-last">
+            <figure
+              class="
+                col-3
+                my-2 my-lg-0
+                offset-2 offset-lg-0
+                col-lg-2
+                my-auto
+                order-first order-lg-last
+              "
+            >
               <img
                 src="assets\images\SEOforREI-logo.png"
                 alt=""
@@ -212,15 +231,14 @@
               <h3 class="display-8 text-center">Tools</h3>
               <!--Tool icons-->
               <div class="row">
-                <div class="col-6 d-flex flex-column align-items-center">
+                <div class="col-12 d-flex flex-column align-items-center">
                   <img
                     src="assets\svg\icons\Icon simple-adobeillustrator.svg"
                   />
                   <p class="display-8 text-altgray">Illustrator</p>
                   <img src="assets\svg\icons\Icon awesome-github.svg" />
                   <p class="display-8 text-altgray">Github</p>
-                </div>
-                <div class="col-6 d-flex flex-column align-items-center">
+
                   <img src="assets\svg\icons\Icon simple-adobexd.svg" />
                   <p class="display-8 text-altgray">Adobe XD</p>
                   <img src="assets\svg\icons\Icon simple-adobephotoshop.svg" />
@@ -233,15 +251,13 @@
               <h3 class="display-8 text-center">Front-End</h3>
               <!--Front-end icons-->
               <div class="row">
-                <div class="col-6 d-flex flex-column align-items-center">
+                <div class="col-12 d-flex flex-column align-items-center">
                   <img
                     src="assets\svg\icons\Icon simple-adobeillustrator html_css.svg"
                   />
                   <p class="display-8 text-altgray">HTML / CSS</p>
                   <img src="assets\svg\icons\Icon awesome-bootstrap.svg" />
                   <p class="display-8 text-altgray">Bootstrap</p>
-                </div>
-                <div class="col-6 d-flex flex-column align-items-center">
                   <img src="assets\svg\icons\Icon awesome-sass.svg" />
                   <p class="display-8 text-altgray">Sass</p>
                   <img src="assets\svg\icons\Icon awesome-wordpress.svg" />
@@ -273,15 +289,21 @@
                 The design and layout were already decided, with my part being
                 the development.<br />
               </p>
-              <button
-                class="btn btn-primary bg-transparent border-2 text-light"
-              >
+              <button class="btn btn-outline-primary text-light">
                 <span class="display-8">Visit </span
                 ><i class="fas fa-arrow-circle-right fa-2x"></i>
               </button>
               <i class="bi bi-arrow-right-circle-fill"></i>
             </div>
-            <figure class="col-10 col-lg-4 my-auto order-first order-lg-last">
+            <figure
+              class="
+                col-6
+                offset-2 offset-lg-0
+                col-lg-4
+                my-auto
+                order-first order-lg-last
+              "
+            >
               <img
                 src="assets\mockups\kbkaty-mockup-device-array.png"
                 alt=""
@@ -335,15 +357,13 @@
           </p>
         </div>
 
-        <figure class="col-lg-4 offset-1 col-10 order-first order-lg-lst">
+        <figure
+          class="my-auto col-lg-4 offset-1 col-10 order-first order-lg-lst"
+        >
           <img
             src="assets\images\michael-border-sit-far.png"
             alt="Michael Gombos Standing"
-            class="
-              img-fluid
-              border border-3
-              rounded-bottom-left rounded-top-right
-            "
+            class="img-fluid rounded-bottom-left rounded-top-right"
           />
         </figure>
       </div>
