Removed works page from navigation. Added resume and linked to navigation

--- a/index.html
+++ b/index.html
@@ -17,19 +17,33 @@
     <title>Michael Gombos | Houston Web Designer</title>
   </head>
   <body class="bg-dark text-light">
-    <!-- Main Nav-->
+    <!-- Hero-->
     <div id="_hero" class="py-5 bg-secondary rounded-bottom-right">
-      <header class="container-fluid my-5">
-        <nav class="container d-flex justify-content-between display-8">
-          <a href="index.html" class="text-decoration-none link-altprimary"
-            >Gombos
-          </a>
-          <a href="works.html" class="text-decoration-none link-altprimary"
-            >Works <i class="fas fa-arrow-circle-right"></i
-          ></a>
+      <header class="container-fluid">
+        <nav class="container row flex-lg-row flex-column mx-auto">
+          <div
+            class="
+              my-auto
+              offset-lg-1
+              col-10
+              text-center text-lg-start
+              order-lg-first
+              display-7
+              d-flex
+              justify-content-between
+            "
+          >
+            <a href="index.html" class="text-decoration-none link-altprimary"
+              >Gombos
+            </a>
+            <a
+              href="assets\docs\Michael Gombos Web Designer 2021.pdf"
+              class="text-decoration-none link-altprimary"
+              >View Resume
+            </a>
+          </div>
         </nav>
       </header>
-      <!-- Hero-->
       <main>
         <div class="container-fluid mt-lg-5 pt-lg-5">
           <div class="container row flex-lg-row flex-column mx-auto">
@@ -289,11 +303,13 @@
                 The design and layout were already decided, with my part being
                 the development.<br />
               </p>
-              <button class="btn btn-outline-primary text-light">
-                <span class="display-8">Visit </span
+              <button class="btn btn-outline-primary link-light">
+                <a
+                  href="https://www.kbkaty.com"
+                  class="link-light text-decoration-none display-8"
+                  >Visit </a
                 ><i class="fas fa-arrow-circle-right fa-2x"></i>
               </button>
-              <i class="bi bi-arrow-right-circle-fill"></i>
             </div>
             <figure
               class="
@@ -375,9 +391,9 @@
         <a href="#_hero" class="text-decoration-none link-altprimary"
           >Top <i class="fas fa-arrow-circle-up"></i>
         </a>
-        <a href="works.html" class="text-decoration-none link-altprimary"
+        <!-- <a href="works.html" class="text-decoration-none link-altprimary"
           >See more Works<i class="fas fa-arrow-circle-right"></i
-        ></a>
+        ></a> -->
       </nav>
     </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
