edited resume content

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
           <div class="row mt-5">
             <div class="col-10 offset-2 col-lg-6">
-              <h3 class="display-5">Web Design Instructor</h3>
+              <h3 class="display-5">SEO consultant</h3>
 
               <p class="text-altgray display-8 mb-0">
                 <em>SEO for Real Estate Investors</em>
