--- a/index.html
+++ b/index.html
@@ -36,11 +36,6 @@
             <a href="index.html" class="text-decoration-none link-altprimary"
               >Gombos
             </a>
-            <a
-              href="assets\docs\Michael Gombos Web Designer 2021.pdf"
-              class="text-decoration-none link-altprimary"
-              >View Resume
-            </a>
           </div>
         </nav>
       </header>
@@ -111,7 +106,7 @@
       <div class="row">
         <div class="bg-secondary col-10 offset-1 py-4 radius-50-l">
           <!--content-->
-          <h2 class="display-3 text-center">Experience</h2>
+          <h2 class="display-3 text-center">Design Experience</h2>
           <hr class="bg-primary w-25 mx-auto opacity-1" />
           <div class="row">
             <div class="col-10 offset-2 col-lg-6">
