Redesigned Hero Section component, Fishtail component, and Intro/outro components

--- a/index.html
+++ b/index.html
@@ -30,16 +30,40 @@
               order-lg-first
               display-7
               d-flex
-              justify-content-between
+              justify-content-start
             "
           >
-            <a href="index.html" class="text-decoration-none link-altprimary"
-              >Gombos
-            </a>
             <a
               href="assets\docs\Michael Gombos Web Designer 2021.pdf"
-              class="text-decoration-none link-altprimary"
-              >View Resume
+              class="
+                ms-0
+                ps-0
+                text-decoration-none
+                f-6
+                link-light
+                nav-link nav-link-ltr
+              "
+              >Resume
+            </a>
+            <a
+              href="index.html"
+              class="text-decoration-none f-6 link-light nav-link nav-link-ltr"
+              >Design
+            </a>
+            <a
+              href="index.html"
+              class="text-decoration-none f-6 link-light nav-link nav-link-ltr"
+              >Development
+            </a>
+            <a
+              href="index.html"
+              class="text-decoration-none f-6 link-light nav-link nav-link-ltr"
+              >Skills
+            </a>
+            <a
+              href="index.html"
+              class="text-decoration-none f-6 link-light nav-link nav-link-ltr"
+              >Experience
             </a>
           </div>
         </nav>
@@ -50,7 +74,7 @@
             <figure class="col-lg-4 mx-auto col-10">
               <img
                 class="img-fluid"
-                src="assets\images\white-line-art-large.png"
+                src="assets\images\mrSexellent has been turned into lines oh nooo somebody help please please please.svg"
               />
             </figure>
 
@@ -63,16 +87,12 @@
                 order-lg-first
               "
             >
-              <h1 class="display-1">
-                <strong>
-                  Hi,<br />
-                  I build websites.
-                </strong>
+              <h1 class="hero-text">
+                <span class="f-1 thin text-primary"> Michael </span><br />
+                <strong class="f-1"> Gombos! </strong>
               </h1>
-
-              <p class="display-7 mb-0 mt-5">Michael Gombos,</p>
-              <h2 class="text-altprimary display-5 mt-0">
-                Houston Web Designer
+              <h2 class="text-light display-6 hero-subheader">
+                Houston Based Web Designer
               </h2>
             </div>
           </div>
@@ -83,25 +103,105 @@
     <!-- About-->
     <section class="container mb-5 mt-2">
       <div class="row flex-column flex-lg-row">
-        <figure class="col-lg-4 offset-1 col-10">
-          <img
-            src="assets\images\michael-smile-vines.png"
-            alt="Michael Gombos Standing"
-            class="img-fluid rounded-top-left rounded-bottom-right"
-          />
-        </figure>
-
-        <div class="col-lg-5 col-10 offset-1 offset-lg-0 my-auto">
+        <div class="col-lg-5 col-10 offset-1 offset-lg-1 my-auto">
           <!-- Todo: display none on phone, change direction instead -->
-          <h2 class="display-3">
-            <i class="w-75 d-none d-lg-inline fas fa-arrow-left"></i
-            ><i class="w-75 d-lg-none d-inline fas fa-arrow-up"></i>Yep, thats
-            me!
+          <h2 class="display-4">
+            <i class="w-75 d-lg-none d-inline fas fa-arrow-up"></i
+            ><span class="fw-bold">Yep,</span>
+            <span class="fw-light text-primary">thats me!</span>
+            <img
+              class="d-inline loop-arrow"
+              src="assets\svg\icons\loop-arrow-right.svg"
+            />
           </h2>
           <p class="lead">
-            I am a Computer Science major at HCC, I work from home as a Web
-            Designer by day, and freelancer by night.
+            I'm a part time student at Houston community college, with plans to
+            continue my education at The University of Houston upon graduation.
+            <br />
+            <br />
+            I like to spend my free time practicing the ukulele, repairing
+            military grade jet turbines, and lying about my hobbies.
           </p>
+        </div>
+        <figure class="col-lg-4 col-10">
+          <img
+            src="assets\images\mrSexellent and his awesome smile.png"
+            alt="Michael Gombos Standing"
+            class="img-fluid"
+          />
+        </figure>
+      </div>
+    </section>
+    <!-- Design Projects -->
+
+    <section class="my-5 container-fluid">
+      <div class="row">
+        <div
+          class="
+            bg-secondary
+            col-1
+            fishtail
+            d-flex
+            flex-column
+            justify-content-between
+          "
+        >
+          <img
+            src="assets\svg\fishtails\fishtail-secondary-bl.svg"
+            class="fishtail-bl"
+          />
+
+          <img
+            src="assets\svg\fishtails\fishtail-secondary-tl.svg"
+            class="fishtail-tl"
+          />
+        </div>
+        <div class="bg-secondary col-10 offset-0 pb-5 radius-50-r">
+          <!--content-->
+          <h2 class="section-header offset-2">Design</h2>
+          <div class="row">
+            <div class="col-10 offset-2 col-lg-10">
+              <h3 class="display-4 mb-0">
+                <span class="fw-bold">KbKaty.com</span>
+                <span class="fw-light text-primary">Website Design</span>
+              </h3>
+              <p class="text-altgray display-8 mb-lg-4">
+                <em>Bootstrap</em>
+              </p>
+            </div>
+            <div class="col-10 offset-2 col-lg-4">
+              <p class="lead">
+                KbKaty is a Texas contracting company that opened in 2018. I
+                created their first website working closely with the owner to
+                decide on a design<br /><br />
+                This was one of my first real projects and taught me a lot about
+                extracting content from clients.
+              </p>
+              <button class="btn btn-outline-primary fw-lighter text-light">
+                View Live Site
+                <img
+                  class="d-inline"
+                  src="assets\svg\icons\Icon feather-external-link.svg"
+                />
+              </button>
+            </div>
+            <figure
+              class="
+                col-3
+                my-2 my-lg-0
+                offset-2 offset-lg-0
+                col-lg-4
+                my-auto
+                order-first order-lg-last
+              "
+            >
+              <img
+                src="assets\mockups\kbkaty-mockup.png"
+                alt=""
+                class="img-fluid"
+              />
+            </figure>
+          </div>
         </div>
       </div>
     </section>
