Redesigned Development and Skills sections

--- a/index.html
+++ b/index.html
@@ -205,91 +205,147 @@
         </div>
       </div>
     </section>
-    <!-- Experience -->
+    <!-- Development Projects -->
 
-    <section class="container-fluid">
+    <section class="my-5 container-fluid">
       <div class="row">
-        <div class="bg-secondary col-10 offset-1 py-4 radius-50-l">
+        <div class="bg-secondary col-10 offset-1 pb-5 radius-50-l">
           <!--content-->
-          <h2 class="display-3 text-center">Experience</h2>
-          <hr class="bg-primary w-25 mx-auto opacity-1" />
-          <div class="row">
-            <div class="col-10 offset-2 col-lg-6">
-              <h3 class="display-5">Web Designer</h3>
-
-              <p class="text-altgray display-8 mb-0">
-                <em>99Cave Web Designs</em>
+          <h2 class="section-header offset-2">Development</h2>
+          <div class="row mb-5">
+            <div class="col-10 offset-2 col-lg-10">
+              <h3 class="display-4 mb-0">
+                <span class="fw-bold">Carrot.com</span>
+                <span class="fw-light text-primary">Css Tab Extender</span>
+              </h3>
+              <p class="text-altgray display-8 mb-lg-4">
+                <em>Chrome Extension</em>
               </p>
-              <p class="text-altgray mt-0 mb-3">
-                <em>Jun. 2020 - Dec. 2020</em>
-              </p>
+            </div>
+            <div class="col-10 offset-2 col-lg-4">
               <p class="lead">
-                Designed and developed websites for local businesses.<br />
-                Gathered client information such as business goals and target
-                customer.<br />
-                Designed wireframes and mockups using adobe XD.<br />
-                Constructed fast mobile responsive sites using bootstrap.<br />
+                While working at SEO for real estate investors, I spent a lot of
+                my time inside of the carrot editor tweaking and designing web
+                pages. The carrot.com design tab offers a CSS editor much like
+                WordPress, but I found the default size to be too small.
+                <br /><br />
+                I made an extension to give myself more breathing room while in
+                the CSS tab, that can be found on the google app store!
               </p>
-              <i class="bi bi-arrow-right-circle-fill"></i>
+              <button class="btn btn-outline-primary fw-lighter text-light">
+                <a
+                  href="https://github.com/MichaelGombos"
+                  class="text-decoration-none text-white"
+                  target="_blank"
+                >
+                  View Github
+                  <img
+                    class="d-inline"
+                    src="assets\svg\icons\Icon feather-external-link.svg"
+                  />
+                </a>
+              </button>
+              <button class="btn btn-outline-primary fw-lighter text-light">
+                <a
+                  href="https://chrome.google.com/webstore/detail/carrot-css-tab-extender/lgkdfebkigaodhjhbceehdilafpdallo?hl=en"
+                  class="text-decoration-none text-white"
+                  target="_blank"
+                >
+                  View Extension Page
+                  <img
+                    class="d-inline"
+                    src="assets\svg\icons\Icon feather-external-link.svg"
+                  />
+                </a>
+              </button>
             </div>
             <figure
               class="
                 col-3
                 my-2 my-lg-0
                 offset-2 offset-lg-0
-                col-lg-2
+                col-lg-4
                 my-auto
                 order-first order-lg-last
               "
             >
-              <img
-                src="assets\images\99cave-logo.png"
-                alt=""
-                class="img-fluid"
-              />
+              <a
+                href="https://chrome.google.com/webstore/detail/carrot-css-tab-extender/lgkdfebkigaodhjhbceehdilafpdallo?hl=en"
+                target="_blank"
+              >
+                <img
+                  src="assets\mockups\css-extender-mockup.png"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
             </figure>
           </div>
 
-          <div class="row mt-5">
-            <div class="col-10 offset-2 col-lg-6">
-              <h3 class="display-5">SEO consultant</h3>
-
-              <p class="text-altgray display-8 mb-0">
-                <em>SEO for Real Estate Investors</em>
+          <div class="row">
+            <div class="col-10 offset-2 col-lg-10">
+              <h3 class="display-4 mb-0">
+                <span class="fw-bold">Python</span>
+                <span class="fw-light text-primary">Email Scraper</span>
+              </h3>
+              <p class="text-altgray display-8 mb-lg-4">
+                <em>Web Scraper</em>
               </p>
-              <p class="text-altgray mt-0 mb-3">
-                <em>Jan. 2021 - Present</em>
-              </p>
-              <p class="lead">
-                Guided business owners on proper content writing and design
-                methodology.
-                <br />
-                Explained web design concepts in a digestible and clear manner
-                for beginners.
-                <br />
-                Evaluated sites for design flaws and SEO errors.
-
-                <br />
-                Designed and launched websites using WYSIWYG editor.<br />
-              </p>
-              <i class="bi bi-arrow-right-circle-fill"></i>
             </div>
-            <figure
+            <div class="col-10 offset-2 col-lg-4">
+              <p class="lead">
+                This is a tool I built to assist me in my freshman year
+                internship search. Lets say for example you wanted to contact
+                the owner of jogger.com via email.
+                <br /><br />
+                This tool would allow you to Query all emails found for the site
+                in the snov.io database and it will return all data as JSON
+                objects. Learn more on my GitHub.
+              </p>
+              <button class="btn btn-outline-primary fw-lighter text-light">
+                <a
+                  href="https://github.com/MichaelGombos"
+                  class="text-decoration-none text-white"
+                  target="_blank"
+                >
+                  View Github
+                  <img
+                    class="d-inline"
+                    src="assets\svg\icons\Icon feather-external-link.svg"
+                  />
+                </a>
+              </button>
+              <button class="btn btn-outline-primary fw-lighter text-light">
+                <a
+                  href="https://chrome.google.com/webstore/detail/carrot-css-tab-extender/lgkdfebkigaodhjhbceehdilafpdallo?hl=en"
+                  class="text-decoration-none text-white"
+                  target="_blank"
+                >
+                  Watch Video
+                  <img
+                    class="d-inline"
+                    src="assets\svg\icons\Icon feather-external-link.svg"
+                  />
+                </a>
+              </button>
+            </div>
+
+            <iframe
+              src="https://www.youtube.com/embed/tZADWMozBn0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
               class="
+                video-1
                 col-3
                 my-2 my-lg-0
                 offset-2 offset-lg-0
-                col-lg-2
+                col-lg-4
                 my-auto
                 order-first order-lg-last
               "
-            >
-              <img
-                src="assets\images\SEOforREI-logo.png"
-                alt=""
-                class="img-fluid"
-              />
-            </figure>
+            ></iframe>
           </div>
         </div>
         <div
@@ -337,15 +393,14 @@
             class="fishtail-tl"
           />
         </div>
-        <div class="bg-secondary col-10 py-4 radius-50-r">
-          <h2 class="display-3 text-center">Skills</h2>
-          <hr class="bg-primary w-25 mx-auto opacity-1" />
+        <div class="bg-secondary col-10 pb-5 radius-50-r">
+          <h2 class="section-header offset-2">Skills</h2>
           <div class="row justify-content-center">
-            <div class="col-4">
-              <h3 class="display-8 text-center">Tools</h3>
+            <div class="col-4 offset-1">
+              <h3 class="display-8 text-start">Tools</h3>
               <!--Tool icons-->
               <div class="row">
-                <div class="col-12 d-flex flex-column align-items-center">
+                <div class="col-12 d-flex flex-column align-items-start">
                   <img
                     src="assets\svg\icons\Icon simple-adobeillustrator.svg"
                   />
@@ -362,10 +417,10 @@
             </div>
             <div class="col-1"></div>
             <div class="col-4">
-              <h3 class="display-8 text-center">Front-End</h3>
+              <h3 class="display-8 text-start">Front-End</h3>
               <!--Front-end icons-->
               <div class="row">
-                <div class="col-12 d-flex flex-column align-items-center">
+                <div class="col-12 d-flex flex-column align-items-start">
                   <img
                     src="assets\svg\icons\Icon simple-adobeillustrator html_css.svg"
                   />
@@ -383,7 +438,7 @@
         </div>
       </div>
     </section>
-    <!-- Works-->
+    <!-- Experience-->
     <section class="container-fluid">
       <div class="row">
         <div class="bg-secondary col-10 offset-1 py-4 radius-50-l">
