--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
         <div class="bg-secondary col-10 offset-0 pb-5 radius-50-r">
           <!--content-->
-          <h2 class="section-header offset-2">Design</h2>
+          <h2 class="section-header display-1 offset-2">Design</h2>
           <div class="row">
             <div class="col-10 offset-2 col-lg-10">
               <h3 class="display-4 mb-0">
@@ -211,7 +211,7 @@
       <div class="row">
         <div class="bg-secondary col-10 offset-1 pb-5 radius-50-l">
           <!--content-->
-          <h2 class="section-header offset-2">Development</h2>
+          <h2 class="section-header display-1 offset-2">Development</h2>
           <div class="row mb-5">
             <div class="col-10 offset-2 col-lg-10">
               <h3 class="display-4 mb-0">
@@ -394,7 +394,7 @@
           />
         </div>
         <div class="bg-secondary col-10 pb-5 radius-50-r">
-          <h2 class="section-header offset-2">Skills</h2>
+          <h2 class="section-header display-1 offset-2">Skills</h2>
           <div class="row justify-content-center">
             <div class="col-4 offset-1">
               <h3 class="display-8 text-start">Tools</h3>
@@ -439,48 +439,42 @@
       </div>
     </section>
     <!-- Experience-->
-    <section class="container-fluid">
+    <section class="my-5 container-fluid">
       <div class="row">
-        <div class="bg-secondary col-10 offset-1 py-4 radius-50-l">
+        <div class="bg-secondary col-10 offset-1 pb-5 radius-50-l">
           <!--content-->
-          <h2 class="display-3 text-center">Most Recent Client</h2>
-          <hr class="bg-primary w-25 mx-auto opacity-1" />
-          <div class="row">
-            <div class="col-10 offset-2 col-lg-4">
-              <h3 class="display-5">KbKaty.com</h3>
+          <h2 class="section-header display-1 offset-2">Experience</h2>
 
-              <p class="text-altgray display-8 mb-0">
-                <em>Bootstrap</em>
-              </p>
-              <p class="lead">
-                KbKaty.com is a Texas contracting company that opened in 2018.
-                We were able to produce a 20% increase in PPC conversions.<br />
-                The design and layout were already decided, with my part being
-                the development.<br />
-              </p>
-              <button class="btn btn-outline-primary link-light">
-                <a
-                  href="https://www.kbkaty.com"
-                  class="link-light text-decoration-none display-8"
-                  >Visit </a
-                ><i class="fas fa-arrow-circle-right fa-2x"></i>
-              </button>
+          <div class="row">
+            <div class="col-10 offset-2 col-lg-10">
+              <h3 class="display-4 mb-0 fw-bold">Website support specialist</h3>
+              <div class="mb-3">
+                <p class="d-inline text-primary display-8 mb-lg-4 me-5">
+                  <em>SEO for real estate investors</em>
+                </p>
+                <p class="d-inline text-altgray lead mb-lg-4">
+                  <em>Jan.2021 - Present</em>
+                </p>
+              </div>
             </div>
-            <figure
-              class="
-                col-6
-                offset-2 offset-lg-0
-                col-lg-4
-                my-auto
-                order-first order-lg-last
-              "
-            >
-              <img
-                src="assets\mockups\kbkaty-mockup-device-array.png"
-                alt=""
-                class="img-fluid"
-              />
-            </figure>
+            <div class="col-10 offset-2 col-lg-7">
+              <ul class="lead">
+                <li>
+                  Guided business owners on proper content writing and design
+                  methodology.
+                </li>
+                <li>
+                  Explained web design concepts in a digestible and clear manner
+                  for beginners.
+                </li>
+                <li>Designed and launched websites using WYSIWYG editor.</li>
+                <li>
+                  Documented common issues for clients and created guides to
+                  resolve confusion.
+                </li>
+                <li>Provided one on one technical support to CMS users.</li>
+              </ul>
+            </div>
           </div>
         </div>
         <div
@@ -506,10 +500,10 @@
       </div>
     </section>
     <!-- Contact-->
-    <section class="container mt-5">
+    <section class="container my-5">
       <div class="row flex-column flex-lg-row">
-        <div class="col-lg-4 col-10 offset-1 offset-lg-0 my-auto">
-          <h2 class="display-3">Contact Me</h2>
+        <div class="col-lg-4 col-10 offset-1 offset-lg-1 my-auto">
+          <h2 class="display-3 fw-bolder">Contact Me</h2>
           <p class="lead mb-0 mt-4">
             Email:
             <a
@@ -528,11 +522,9 @@
           </p>
         </div>
 
-        <figure
-          class="my-auto col-lg-4 offset-1 col-10 order-first order-lg-lst"
-        >
+        <figure class="my-auto col-lg-4 offset-0 col-10">
           <img
-            src="assets\images\michael-border-sit-far.png"
+            src="assets\images\my-standing-framed.png"
             alt="Michael Gombos Standing"
             class="img-fluid rounded-bottom-left rounded-top-right"
           />
