Restyled About section to line up with grid

--- a/index.html
+++ b/index.html
@@ -101,35 +101,39 @@
     </div>
     <img src="assets\svg\fishtails\fishtail-secondary-tl.svg" />
     <!-- About-->
-    <section class="container mb-5 mt-2">
+    <section class="container-fluid mb-5 mt-2">
       <div class="row flex-column flex-lg-row">
-        <div class="col-lg-5 col-10 offset-1 offset-lg-1 my-auto">
-          <!-- Todo: display none on phone, change direction instead -->
-          <h2 class="display-4">
-            <i class="w-75 d-lg-none d-inline fas fa-arrow-up"></i
-            ><span class="fw-bold">Yep,</span>
-            <span class="fw-light text-primary">thats me!</span>
+        <div class="col-1 bg-primary"></div>
+        <div class="col-10 row">
+          <div class="col-lg-5 offset-2 col-10 my-auto">
+            <!-- Todo: display none on phone, change direction instead -->
+            <h2 class="display-5">
+              <i class="w-75 d-lg-none d-inline fas fa-arrow-up"></i
+              ><span class="fw-bold">Yep,</span>
+              <span class="fw-light text-primary">thats me!</span>
+              <img
+                class="d-inline loop-arrow"
+                src="assets\svg\icons\loop-arrow-right.svg"
+              />
+            </h2>
+            <p class="lead">
+              I'm a part time student at Houston community college, with plans
+              to continue my education at The University of Houston upon
+              graduation.
+              <br />
+              <br />
+              I like to spend my free time practicing the ukulele, repairing
+              military grade jet turbines, and lying about my hobbies.
+            </p>
+          </div>
+          <figure class="col-lg-5 col-10">
             <img
-              class="d-inline loop-arrow"
-              src="assets\svg\icons\loop-arrow-right.svg"
+              src="assets\images\mrSexellent and his awesome smile.png"
+              alt="Michael Gombos Standing"
+              class="img-fluid"
             />
-          </h2>
-          <p class="lead">
-            I'm a part time student at Houston community college, with plans to
-            continue my education at The University of Houston upon graduation.
-            <br />
-            <br />
-            I like to spend my free time practicing the ukulele, repairing
-            military grade jet turbines, and lying about my hobbies.
-          </p>
+          </figure>
         </div>
-        <figure class="col-lg-4 col-10">
-          <img
-            src="assets\images\mrSexellent and his awesome smile.png"
-            alt="Michael Gombos Standing"
-            class="img-fluid"
-          />
-        </figure>
       </div>
     </section>
     <!-- Design Projects -->
@@ -161,7 +165,7 @@
           <h2 class="section-header display-1 offset-2">Design</h2>
           <div class="row">
             <div class="col-10 offset-2 col-lg-10">
-              <h3 class="display-4 mb-0">
+              <h3 class="display-5 mb-0">
                 <span class="fw-bold">KbKaty.com</span>
                 <span class="fw-light text-primary">Website Design</span>
               </h3>
@@ -214,7 +218,7 @@
           <h2 class="section-header display-1 offset-2">Development</h2>
           <div class="row mb-5">
             <div class="col-10 offset-2 col-lg-10">
-              <h3 class="display-4 mb-0">
+              <h3 class="display-5 mb-0">
                 <span class="fw-bold">Carrot.com</span>
                 <span class="fw-light text-primary">Css Tab Extender</span>
               </h3>
@@ -284,7 +288,7 @@
 
           <div class="row">
             <div class="col-10 offset-2 col-lg-10">
-              <h3 class="display-4 mb-0">
+              <h3 class="display-5 mb-0">
                 <span class="fw-bold">Python</span>
                 <span class="fw-light text-primary">Email Scraper</span>
               </h3>
@@ -447,7 +451,7 @@
 
           <div class="row">
             <div class="col-10 offset-2 col-lg-10">
-              <h3 class="display-4 mb-0 fw-bold">Website support specialist</h3>
+              <h3 class="display-5 mb-0 fw-bold">Website support specialist</h3>
               <div class="mb-3">
                 <p class="d-inline text-primary display-8 mb-lg-4 me-5">
                   <em>SEO for real estate investors</em>
