Restyled contact section to line up with grid

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <!-- About-->
     <section class="container-fluid mb-5 mt-2">
       <div class="row flex-column flex-lg-row">
-        <div class="col-1 bg-primary"></div>
+        <div class="col-1"></div>
         <div class="col-10 row">
           <div class="col-lg-5 offset-2 col-10 my-auto">
             <!-- Todo: display none on phone, change direction instead -->
@@ -504,35 +504,38 @@
       </div>
     </section>
     <!-- Contact-->
-    <section class="container my-5">
-      <div class="row flex-column flex-lg-row">
-        <div class="col-lg-4 col-10 offset-1 offset-lg-1 my-auto">
-          <h2 class="display-3 fw-bolder">Contact Me</h2>
-          <p class="lead mb-0 mt-4">
-            Email:
-            <a
-              class="link-altprimary text-decoration-none"
-              href="mailto:gombos2002@gmail.com"
-              >gombos2002@gmail.com</a
-            >
-          </p>
-          <p class="lead mt-0">
-            Phone:
-            <a
-              class="link-altprimary text-decoration-none"
-              href="tel:3463378946"
-              >346-337-8946</a
-            >
-          </p>
-        </div>
 
-        <figure class="my-auto col-lg-4 offset-0 col-10">
-          <img
-            src="assets\images\my-standing-framed.png"
-            alt="Michael Gombos Standing"
-            class="img-fluid rounded-bottom-left rounded-top-right"
-          />
-        </figure>
+    <section class="container-fluid mb-5 mt-2">
+      <div class="row flex-column flex-lg-row">
+        <div class="col-1"></div>
+        <div class="col-10 row">
+          <div class="col-lg-5 offset-2 col-10 my-auto">
+            <h2 class="display-3 fw-bolder">Contact Me</h2>
+            <p class="lead mb-0 mt-4">
+              Email:
+              <a
+                class="link-altprimary text-decoration-none"
+                href="mailto:gombos2002@gmail.com"
+                >gombos2002@gmail.com</a
+              >
+            </p>
+            <p class="lead mt-0">
+              Phone:
+              <a
+                class="link-altprimary text-decoration-none"
+                href="tel:3463378946"
+                >346-337-8946</a
+              >
+            </p>
+          </div>
+          <figure class="col-lg-5 col-10">
+            <img
+              src="assets\images\my-standing-framed.png"
+              alt="Michael Gombos Standing"
+              class="img-fluid"
+            />
+          </figure>
+        </div>
       </div>
     </section>
     <!-- Footer-->
