Updated Navigation Links, Added Anchors to Sections

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     ></script>
     <title>Michael Gombos | Houston Web Designer</title>
   </head>
-  <body class="bg-dark text-light">
+  <base href="https://www.michaelgombos.com" />
     <!-- Hero-->
     <div id="_hero" class="py-5 bg-secondary rounded-bottom-right">
       <header class="container-fluid">
@@ -46,22 +46,22 @@
               >Resume
             </a>
             <a
-              href="index.html"
+              href="#design-projects"
               class="text-decoration-none f-6 link-light nav-link nav-link-ltr"
               >Design
             </a>
             <a
-              href="index.html"
+              href="#development-projects"
               class="text-decoration-none f-6 link-light nav-link nav-link-ltr"
               >Development
             </a>
             <a
-              href="index.html"
+              href="#skills"
               class="text-decoration-none f-6 link-light nav-link nav-link-ltr"
               >Skills
             </a>
             <a
-              href="index.html"
+              href="#experience"
               class="text-decoration-none f-6 link-light nav-link nav-link-ltr"
               >Experience
             </a>
@@ -101,6 +101,7 @@
     </div>
     <img src="assets\svg\fishtails\fishtail-secondary-tl.svg" />
     <!-- About-->
+    <a id="about" class="anchor"></a>
     <section class="container-fluid mb-5 mt-2">
       <div class="row flex-column flex-lg-row">
         <div class="col-1"></div>
@@ -137,7 +138,7 @@
       </div>
     </section>
     <!-- Design Projects -->
-
+    <a id="design-projects" class="anchor"></a>
     <section class="my-5 container-fluid">
       <div class="row">
         <div
@@ -210,7 +211,7 @@
       </div>
     </section>
     <!-- Development Projects -->
-
+    <a id="development-projects" class="anchor"></a>
     <section class="my-5 container-fluid">
       <div class="row">
         <div class="bg-secondary col-10 offset-1 pb-5 radius-50-l">
@@ -375,6 +376,7 @@
       </div>
     </section>
     <!-- Skills-->
+    <a id="skills" class="anchor"></a>
     <section class="container-fluid my-5">
       <div class="row">
         <div
@@ -443,6 +445,7 @@
       </div>
     </section>
     <!-- Experience-->
+    <a id="experience" class="anchor"></a>
     <section class="my-5 container-fluid">
       <div class="row">
         <div class="bg-secondary col-10 offset-1 pb-5 radius-50-l">
@@ -504,7 +507,7 @@
       </div>
     </section>
     <!-- Contact-->
-
+    <a id="contact" class="anchor"></a>
     <section class="container-fluid mb-5 mt-2">
       <div class="row flex-column flex-lg-row">
         <div class="col-1"></div>
