Removed Base tag, replaced Body tag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     ></script>
     <title>Michael Gombos | Houston Web Designer</title>
   </head>
-  <base href="https://www.michaelgombos.com" />
+  <body class="bg-dark text-light">
     <!-- Hero-->
     <div id="_hero" class="py-5 bg-secondary rounded-bottom-right">
       <header class="container-fluid">
@@ -46,7 +46,7 @@
               >Resume
             </a>
             <a
-              href="#design-projects"
+              href="/#design-projects"
               class="text-decoration-none f-6 link-light nav-link nav-link-ltr"
               >Design
             </a>
